# robbase_description

./: CMakeLists.txt  README.md  package.xml
launch/: chassisJackal.launch  husky4w_hector_baselink.launch  jackal4w_hector_baselink.launch  robbase_baselink.launch
meshes/: wheel-front-c-15cm.txt
meshes_husky/: wheel_front_c__15cm.txt
urdf/: hokuyo_ust10lx.urdf.xacro  husky_typewheel.urdf.xacro  husky_wheeljoint.urdf.xacro  jackal_chassis.urdf.xacro  jackal_wheeltype.urdf.xacro  sick_s3000.urdf.xacro
